pbc_contract_codegen/tests/action/fail/zk/missing_zk_callback_arg.stderr
error[E0080]: evaluation of constant value failed
  --> tests/action/fail/zk/missing_zk_callback_arg.rs:15:1
   |
15 | #[callback(shortname = 0x21)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'callback cannot be non-zk if the init function is zk. Consider using #[callback(zk = true)]', $DIR/tests/action/fail/zk/missing_zk_callback_arg.rs:15:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
